violet: parts: Sync dirac enable string with A12 * All AOSP switchbar strings are formated as 'Use' + tittle string. This should be the same.
Signed-off-by: Niranjan BR <niranjankannan2003@gmail.com>

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="fps_info_title">FPS Counter</string>
 
     <!-- Dirac settings -->
-    <string name="dirac_enable">Enable dirac</string>
+    <string name="dirac_enable">Use Mi Sound Enhancer</string>
     <string name="dirac_title">Mi Sound Enhancer</string>
     <string name="dirac_summary">Optimize audio quality</string>
     <string name="dirac_headset_title">Choose headphones type</string>
